added visible counter

--- a/catCounter.html
+++ b/catCounter.html
@@ -7,6 +7,10 @@
     <title>Cat Counter</title>
 </head>
 <body>
+    <div>
+        <H1>You've Clicked the Cat: </H1>
+        <h2 id="catClicks"></h2>
+    </div>
     <img src="./catPic.jpg" alt="Cat Picture" id ="catPic">
     
     <script src="catCounter.js"></script>
