put counter on same line as H1

--- a/catCounter.html
+++ b/catCounter.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div>
-        <H1>You've Clicked the Cat: </H1>
-        <h2 id="catClicks"></h2>
+        <H1>You've Clicked the Cat: <span id="catClicks"></span></H1>
+        
     </div>
     <img src="./catPic.jpg" alt="Cat Picture" id ="catPic">
     
