resized cat photo

--- a/catCounter.html
+++ b/catCounter.html
@@ -7,12 +7,13 @@
     <title>Cat Counter</title>
 </head>
 <body>
+    <wrapper>
     <div>
         <H1>You've Clicked the Cat: <span id="catClicks"></span></H1>
         
     </div>
-    <img src="./catPic.jpg" alt="Cat Picture" id ="catPic">
-    
+    <img src="./catPic.jpg" alt="Cat Picture"  width="300" height="300" id ="catPic">
+    </wrapper>
     <script src="catCounter.js"></script>
 </body>
 </html>
