added 2nd cat pic w/ working click counter

--- a/catCounter.html
+++ b/catCounter.html
@@ -9,10 +9,15 @@
 <body>
     <wrapper>
     <div>
-        <H1>You've Clicked the Cat: <span id="catClicks"></span></H1>
-        
+        <H1>You've Clicked the Cat: <span id="cat1Clicks"></span></H1>
+        <img src="./catPic.jpg" alt="Cat Picture"  width="300" height="300" id ="catPic">
     </div>
-    <img src="./catPic.jpg" alt="Cat Picture"  width="300" height="300" id ="catPic">
+        <H1>You've Clicked the Cat: <span id="cat2Clicks"></span></H1>
+        <img src="./catPic2.jpeg" alt="Cat Picture"  width="300" height="300" id ="catPic2">
+    <div>
+
+    </div>
+    
     </wrapper>
     <script src="catCounter.js"></script>
 </body>
